@@ -1,0 +1,13 @@
+%Error: t/t_class_misstatic_bad.v:31:7: Cannot call non-static member function 'nonstatic' without object (IEEE 1800-2023 8.10)
+                                      : ... note: In instance 't'
+   31 |       nonstatic();   
+      |       ^~~~~~~~~
+%Error: t/t_class_misstatic_bad.v:38:12: Cannot call non-static member function 'nonstatic' without object (IEEE 1800-2023 8.10)
+                                       : ... note: In instance 't'
+   38 |       Cls::nonstatic();   
+      |            ^~~~~~~~~
+%Error: t/t_class_misstatic_bad.v:44:12: Cannot call non-static member function 'nonstatic' without object (IEEE 1800-2023 8.10)
+                                       : ... note: In instance 't'
+   44 |       Cls::nonstatic();   
+      |            ^~~~~~~~~
+%Error: Exiting due to
